--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ float-ord = "0.3.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.81"
 image = "0.24.2"
+petgraph = "0.6.5"
