playout strat working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix",
-  "cSpell.words": ["playout"]
+  "cSpell.words": ["playout", "playouts"]
 }
